--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,13 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
+	/**先从本地仓库查找jar包*/
 	mavenLocal()
+
+	/**再从aliyun镜像下载依赖jar包*/
 	maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+
+	/**再从maven中央仓库下载依赖jar包*/
 	mavenCentral()
 }
 
