--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
       prefix: /WEB-INF/page/
       suffix: .jsp
 
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.demo.gradle.entity.po
+
 virus:
   info:
     province: Hubei
