完成高性能批量kafka消费者，mybatis也为批量更新操作，目前压测效果看，可以处理100000设备的并发数据处理

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.demo.gradle.entity.po
 
+# SQL日志配置
+logging:
+  level:
+    com.demo.gradle.entity.dao: DEBUG
+
 virus:
   info:
     province: Hubei
