--- a/build.gradle
+++ b/build.gradle
@@ -43,20 +43,21 @@ dependencies {
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
-	/**kafka*/
-
 	/**mysql*/
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.48'
-
 	/**druid*/
 	compile group: 'com.alibaba', name: 'druid-spring-boot-starter', version: '1.1.21'
-
 	/**mybatis*/
 	compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.2'
-
 	/**mybatis-generator core 包*/
 	compile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version:'1.4.0'
 
+	/**kafka*/
+	compile 'org.springframework.kafka:spring-kafka:2.3.4.RELEASE'
+
+	/**proto-buffer*/
+	compile 'io.protostuff:protostuff-core:1.6.0'
+	compile 'io.protostuff:protostuff-runtime:1.6.0'
 }
 
 
